force-app/main/default/objects/CLQ_Standard_Detail__c/CLQ_Standard_Detail__c.object-meta.xml
<CustomObject>
    <label>Standard Detail</label>
    <nameField>
        <label>Standard Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Standard Details</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>