force-app/main/default/objects/CLQ_Standard_Detail__c/fields/AssociatedParentQuestion__c.field-meta.xml
<CustomField>
    <fullName>AssociatedParentQuestion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associated Parent Question</description>
    <label>Associated Parent Question</label>
    <referenceTo>CLQ_Standard_Detail__c</referenceTo>
    <relationshipLabel>Standard Details (Associated Parent Question)</relationshipLabel>
    <relationshipName>Standard_Details3</relationshipName>
    <type>Lookup</type>
</CustomField>