force-app/main/default/objects/CLQ_Standard_Detail__c/fields/CLQ_AssociatedAttachment__c.field-meta.xml
<CustomField>
    <fullName>CLQ_AssociatedAttachment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associated Attachment record, triggered based on an answer selected.</description>
    <label>Associated Attachment</label>
    <referenceTo>CLQ_Standard_Detail__c</referenceTo>
    <relationshipLabel>Standard Details (Associated Attachment)</relationshipLabel>
    <relationshipName>Standard_Details2</relationshipName>
    <type>Lookup</type>
</CustomField>