force-app/main/default/objects/CLQ_Standard_Detail__c/fields/CLQ_Default__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Default__c</fullName>
    <inlineHelpText>Provide the value of the detail (e.g. Fee amount, Document Name)</inlineHelpText>
    <label>Default</label>
    <length>255</length>
    <type>Text</type>
</CustomField>