force-app/main/default/objects/CLQ_Standard_Detail__c/fields/CLQ_Description__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Description__c</fullName>
    <description>Description field</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>