force-app/main/default/objects/CLQ_Standard_Detail__c/fields/CLQ_Detail_Name__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Detail_Name__c</fullName>
    <inlineHelpText>Provide the name of the detail (e.g. Renewal Fee, New Application Fee )</inlineHelpText>
    <label>Detail Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>