force-app/main/default/objects/CLQ_Standard_Detail__c/fields/CLQ_Met_Not_Met__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Met_Not_Met__c</fullName>
    <description>This field maps which possible responses for each Annual Report question result in Met or Not Met</description>
    <inlineHelpText>This field maps which possible responses for each Annual Report question result in Met or Not Met</inlineHelpText>
    <label>Met/Not Met</label>
    <length>255</length>
    <type>Text</type>
</CustomField>