force-app/main/default/objects/CLQ_Standard_Detail__c/fields/CLQ_OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>CLQ_OrderNumber__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Order number</description>
    <label>Order Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>