force-app/main/default/objects/CLQ_Standard_Detail__c/fields/CLQ_ParentQuestion__c.field-meta.xml
<CustomField>
    <fullName>CLQ_ParentQuestion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent Question</description>
    <label>Parent Question</label>
    <referenceTo>CLQ_Standard_Detail__c</referenceTo>
    <relationshipLabel>Parent Questions</relationshipLabel>
    <relationshipName>Standard_Details</relationshipName>
    <type>Lookup</type>
</CustomField>