force-app/main/default/objects/CLQ_Standard_Detail__c/fields/CLQ_PossibleResponses__c.field-meta.xml
<CustomField>
    <fullName>CLQ_PossibleResponses__c</fullName>
    <description>Possible responses for the question.</description>
    <label>Possible Responses</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>