force-app/main/default/objects/CLQ_Standard_Detail__c/fields/CLQ_PreviousQuestionVersion__c.field-meta.xml
<CustomField>
    <fullName>CLQ_PreviousQuestionVersion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Previous Question Version</description>
    <label>Previous Question Version</label>
    <referenceTo>CLQ_Standard_Detail__c</referenceTo>
    <relationshipLabel>Previous Question Version</relationshipLabel>
    <relationshipName>Standard_Details1</relationshipName>
    <type>Lookup</type>
</CustomField>