force-app/main/default/objects/CLQ_Standard_Detail__c/fields/CLQ_QuestionBody__c.field-meta.xml
<CustomField>
    <fullName>CLQ_QuestionBody__c</fullName>
    <description>Question body</description>
    <label>Question Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>