force-app/main/default/objects/CLQ_Standard_Detail__c/fields/CLQ_QuestionType__c.field-meta.xml
<CustomField>
    <fullName>CLQ_QuestionType__c</fullName>
    <description>Type of question.</description>
    <label>Question Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Multiple Options</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Yes-No</fullName>
            </value>
            <value>
                <fullName>Points</fullName>
            </value>
            <value>
                <fullName>Single Option</fullName>
            </value>
            <value>
                <fullName>Instruction</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>