force-app/main/default/objects/CLQ_Standard_Detail__c/fields/CLQ_Show_For__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Show_For__c</fullName>
    <description>Application type</description>
    <label>Show For</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>License Application</fullName>
            </value>
            <value>
                <fullName>Rating Application</fullName>
            </value>
            <value>
                <fullName>Renewal Application</fullName>
            </value>
            <value>
                <fullName>Annual Report</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>