force-app/main/default/objects/CLQ_Standard_Detail__c/fields/CLQ_Status__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Status__c</fullName>
    <description>Record is available or not for use.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>