force-app/main/default/objects/CLQ_Standard_Detail__c/fields/CLQ_TriggeringAttachmentValue__c.field-meta.xml
<CustomField>
    <fullName>CLQ_TriggeringAttachmentValue__c</fullName>
    <description>Triggering Attachment Value</description>
    <label>Triggering Attachment Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>