force-app/main/default/objects/CLQ_Standard_Detail__c/fields/CLQ_TriggeringCommentBoxValue__c.field-meta.xml
<CustomField>
    <fullName>CLQ_TriggeringCommentBoxValue__c</fullName>
    <description>Triggering Comment Box Value</description>
    <label>Triggering Comment Box Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>