force-app/main/default/objects/CLQ_Standard_Detail__c/fields/CLQ_TriggeringParentAnswer__c.field-meta.xml
<CustomField>
    <fullName>CLQ_TriggeringParentAnswer__c</fullName>
    <description>Triggering Parent Answer</description>
    <label>Triggering Parent Answer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>