force-app/main/default/objects/CLQ_Standard_Detail__c/fields/CLQ_Type__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Document</fullName>
            </value>
            <value>
                <fullName>Fee</fullName>
            </value>
            <value>
                <fullName>Prescreen Section</fullName>
            </value>
            <value>
                <fullName>Questionnaire Section</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>