force-app/main/default/objects/CLQ_Standard_Detail__c/fields/CLQ_Version__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Version__c</fullName>
    <defaultValue>1.0</defaultValue>
    <description>Version</description>
    <label>Version</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>