force-app/main/default/objects/CLQ_Standard_Detail__c/fields/Disable_Login__c.field-meta.xml
<CustomField>
    <fullName>Disable_Login__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether or not the login buttons are disabled on the OCLQS Home Page.</description>
    <label>Disable Login</label>
    <type>Checkbox</type>
</CustomField>