force-app/main/default/objects/CLQ_Standard_Detail__c/fields/Document_Required_for_Role__c.field-meta.xml
<CustomField>
    <fullName>Document_Required_for_Role__c</fullName>
    <description>This field is used to ensure that a document is required for each contact of a specific role.</description>
    <inlineHelpText>Select the roles that require this document type to be on file.  If this field is not populated it is assumed that this document type is a program level document and won&apos;t be checked for each member of the organization&apos;s contacts.</inlineHelpText>
    <label>Document Required for Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administrator</fullName>
            </value>
            <value>
                <fullName>Authorized Rep</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Resident</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>