force-app/main/default/objects/CLQ_Standard_Detail__c/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <description>Determines question categorization</description>
    <label>Domain</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Learning &amp; Development</fullName>
            </value>
            <value>
                <fullName>Administrative &amp; Leadership Practices</fullName>
            </value>
            <value>
                <fullName>Staff Qualifications &amp; Professional Development</fullName>
            </value>
            <value>
                <fullName>Family &amp; Community Partnerships</fullName>
            </value>
            <value>
                <fullName>Points 4 &amp; 5</fullName>
            </value>
            <value>
                <fullName>Accreditation</fullName>
            </value>
            <value>
                <fullName>Ratio &amp; Group Size</fullName>
            </value>
            <value>
                <fullName>Extra Points</fullName>
            </value>
            <value>
                <fullName>Expedited Registration Questions</fullName>
            </value>
            <value>
                <fullName>Change of Owner Registration Questions</fullName>
            </value>
            <value>
                <fullName>Reinstate Rating Questions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>