force-app/main/default/objects/CLQ_Standard_Detail__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <description>Holds the End Time of any System Maintenance. To be used with the &quot;Maintenance&quot; Record Type.</description>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>