force-app/main/default/objects/CLQ_Standard_Detail__c/fields/IsDependent__c.field-meta.xml
<CustomField>
    <fullName>IsDependent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Dependent</description>
    <label>Is Dependent</label>
    <type>Checkbox</type>
</CustomField>