force-app/main/default/objects/CLQ_Standard_Detail__c/fields/NewsSection__c.field-meta.xml
<CustomField>
    <fullName>NewsSection__c</fullName>
    <inlineHelpText>Please add the news content here</inlineHelpText>
    <label>NewsSection</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>