force-app/main/default/objects/CLQ_Standard_Detail__c/fields/NewsVersion__c.field-meta.xml
<CustomField>
    <fullName>NewsVersion__c</fullName>
    <displayFormat>N-{000}</displayFormat>
    <label>NewsVersion</label>
    <type>AutoNumber</type>
</CustomField>