force-app/main/default/objects/CLQ_Standard_Detail__c/fields/OCLQS_Button_Name__c.field-meta.xml
<CustomField>
    <fullName>OCLQS_Button_Name__c</fullName>
    <description>Button Name to display on the flip card for OCLQS</description>
    <label>Button Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>