force-app/main/default/objects/CLQ_Standard_Detail__c/fields/OCLQS_Display_Order__c.field-meta.xml
<CustomField>
    <fullName>OCLQS_Display_Order__c</fullName>
    <description>Display order of buttons on the flip card for OCLQS</description>
    <inlineHelpText>Display order of buttons on the flip card.</inlineHelpText>
    <label>Display Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>