force-app/main/default/objects/CLQ_Standard_Detail__c/fields/OCLQS_Role_Allowed__c.field-meta.xml
<CustomField>
    <fullName>OCLQS_Role_Allowed__c</fullName>
    <description>Role allowed to see the buttons on the flip card for OCLQS</description>
    <label>Role Allowed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>JFS Director</fullName>
            </value>
            <value>
                <fullName>JFS Licensing Admin</fullName>
            </value>
            <value>
                <fullName>JFS Owner</fullName>
            </value>
            <value>
                <fullName>JFS SUTQ Consultant</fullName>
            </value>
            <value>
                <fullName>ODE OCLQSAdministrator</fullName>
            </value>
            <value>
                <fullName>ODE OCLQSLicensing</fullName>
            </value>
            <value>
                <fullName>ODE OCLQSOwner</fullName>
            </value>
            <value>
                <fullName>ODE OCLQSSUTQ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>