force-app/main/default/objects/CLQ_Standard_Detail__c/fields/OCLQS_Transaction_Status__c.field-meta.xml
<CustomField>
    <fullName>OCLQS_Transaction_Status__c</fullName>
    <label>Transaction Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual Report Disapproved</fullName>
            </value>
            <value>
                <fullName>Application Revised</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Approver Review In Progress</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Certified</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Closed at Applicant’s Request</fullName>
            </value>
            <value>
                <fullName>Closed by System</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Deferral</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Ineligible</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Licensed</fullName>
            </value>
            <value>
                <fullName>Not Complete</fullName>
            </value>
            <value>
                <fullName>Not Submitted</fullName>
            </value>
            <value>
                <fullName>Onsite Visit Pending</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Rating Assessment Complete</fullName>
            </value>
            <value>
                <fullName>Rating Recommended for Review</fullName>
            </value>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Registration Assigned</fullName>
            </value>
            <value>
                <fullName>Resubmitted</fullName>
            </value>
            <value>
                <fullName>Returned for Revision</fullName>
            </value>
            <value>
                <fullName>Returned to Reviewer</fullName>
            </value>
            <value>
                <fullName>Return for Revision</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Supervisor Desk Review</fullName>
            </value>
            <value>
                <fullName>Supervisor On-Site Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>