force-app/main/default/objects/CLQ_Standard_Detail__c/fields/OCLQS_URL__c.field-meta.xml
<CustomField>
    <fullName>OCLQS_URL__c</fullName>
    <description>URL for the button for navigation on different page</description>
    <label>URL</label>
    <length>200</length>
    <type>Text</type>
</CustomField>