force-app/main/default/objects/CLQ_Standard_Detail__c/fields/Possible_Points__c.field-meta.xml
<CustomField>
    <fullName>Possible_Points__c</fullName>
    <label>Possible Points</label>
    <length>255</length>
    <type>Text</type>
</CustomField>