force-app/main/default/objects/CLQ_Standard_Detail__c/fields/Possible_Ratings__c.field-meta.xml
<CustomField>
    <fullName>Possible_Ratings__c</fullName>
    <label>Possible Ratings</label>
    <length>255</length>
    <type>Text</type>
</CustomField>