force-app/main/default/objects/CLQ_Standard_Detail__c/fields/Question_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Question_Expiration_Date__c</fullName>
    <label>Question Expiration Date</label>
    <type>Date</type>
</CustomField>