force-app/main/default/objects/CLQ_Standard_Detail__c/fields/Required_for_18__c.field-meta.xml
<CustomField>
    <fullName>Required_for_18__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This document is required for all residents 18 years and up.</description>
    <inlineHelpText>Check this box if this document is required for all residents over 18 years old.</inlineHelpText>
    <label>Required for 18+</label>
    <type>Checkbox</type>
</CustomField>