force-app/main/default/objects/CLQ_Standard_Detail__c/fields/Role_Type__c.field-meta.xml
<CustomField>
    <fullName>Role_Type__c</fullName>
    <label>Role Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>JFS</fullName>
            </value>
            <value>
                <fullName>ODE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>