force-app/main/default/objects/CLQ_Standard_Detail__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <description>Holds the Start Time of any System Maintenance. To be used with the &quot;Maintenance&quot; Record Type.</description>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>