force-app/main/default/objects/CLQ_Standard_Detail__c/fields/Transaction_Group_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Group_Type__c</fullName>
    <label>Transaction Group Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>License Card</fullName>
            </value>
            <value>
                <fullName>Amendment</fullName>
            </value>
            <value>
                <fullName>SUTQ Card</fullName>
            </value>
            <value>
                <fullName>Updates</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>