force-app/main/default/objects/CLQ_Standard_Detail__c/fields/Transaction_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Record_Type__c</fullName>
    <label>Transaction Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Transaction_Group_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amendment - Center - Change of Location</fullName>
            </value>
            <value>
                <fullName>Amendment - Change of Administrator</fullName>
            </value>
            <value>
                <fullName>Amendment - FCC - Change of Location</fullName>
            </value>
            <value>
                <fullName>Amendment - ODE - Change of Location</fullName>
            </value>
            <value>
                <fullName>Amendment - ODE and Center - Change of Capacity / Space</fullName>
            </value>
            <value>
                <fullName>Amendment- FCC - Change of Capacity / Space</fullName>
            </value>
            <value>
                <fullName>Application - CC Center</fullName>
            </value>
            <value>
                <fullName>Application - FCC</fullName>
            </value>
            <value>
                <fullName>Application - ODE Program</fullName>
            </value>
            <value>
                <fullName>ApprovalProcess Restricted</fullName>
            </value>
            <value>
                <fullName>Continuous License</fullName>
            </value>
            <value>
                <fullName>Day Camp</fullName>
            </value>
            <value>
                <fullName>Licensing - Closure</fullName>
            </value>
            <value>
                <fullName>Reactivate Transaction</fullName>
            </value>
            <value>
                <fullName>Registration - In-Home Aide</fullName>
            </value>
            <value>
                <fullName>Registration - Out of State</fullName>
            </value>
            <value>
                <fullName>Registration Closure</fullName>
            </value>
            <value>
                <fullName>Renewal - In-Home-Aide</fullName>
            </value>
            <value>
                <fullName>Renewal - Out of State</fullName>
            </value>
            <value>
                <fullName>SUTQ - Annual Report</fullName>
            </value>
            <value>
                <fullName>SUTQ - Initial Registration</fullName>
            </value>
            <value>
                <fullName>SUTQ - Ongoing Registration</fullName>
            </value>
            <value>
                <fullName>Update Contact Information</fullName>
            </value>
            <value>
                <fullName>Update FCC Resident Information</fullName>
            </value>
            <value>
                <fullName>Update Facility Information</fullName>
            </value>
            <value>
                <fullName>Update In-Home Aid</fullName>
            </value>
            <value>
                <fullName>Update In-Home Aide</fullName>
            </value>
            <value>
                <fullName>Update On-site Contact Information</fullName>
            </value>
            <value>
                <fullName>Update Out of State</fullName>
            </value>
            <value>
                <fullName>Update Outdoor Space Information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>