force-app/main/default/objects/CLQ_Standard_Detail__c/recordTypes/CLQ_Button.recordType-meta.xml
<RecordType>
    <fullName>CLQ_Button</fullName>
    <active>true</active>
    <description>User to configure button to display on flip card of program page.</description>
    <label>CLQ Button</label>
</RecordType>