force-app/main/default/objects/CLQ_Standard_Detail__c/recordTypes/CLQ_Document.recordType-meta.xml
<RecordType>
    <fullName>CLQ_Document</fullName>
    <active>true</active>
    <label>Document</label>
</RecordType>