force-app/main/default/objects/CLQ_Standard_Detail__c/recordTypes/CLQ_Fee.recordType-meta.xml
<RecordType>
    <fullName>CLQ_Fee</fullName>
    <active>true</active>
    <label>Fee</label>
</RecordType>