force-app/main/default/objects/CLQ_Standard_Detail__c/recordTypes/CLQ_Question.recordType-meta.xml
<RecordType>
    <fullName>CLQ_Question</fullName>
    <active>true</active>
    <description>All questions will be stored here</description>
    <label>Question</label>
</RecordType>