force-app/main/default/objects/CLQ_Standard_Detail__c/recordTypes/Maintenance.recordType-meta.xml
<RecordType>
    <fullName>Maintenance</fullName>
    <active>true</active>
    <description>Holds System Maintenance data - start times, end times, and messages to be displayed.</description>
    <label>Maintenance</label>
</RecordType>