force-app/main/default/objects/CLQ_Standard_Detail__c/recordTypes/News.recordType-meta.xml
<RecordType>
    <fullName>News</fullName>
    <active>true</active>
    <label>News</label>
</RecordType>